; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msi/extr_db.c_package_from_db.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msi/extr_db.c_package_from_db.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"#%u\00", align 1
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i32*)* @package_from_db to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @package_from_db(i32 %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca [12 x i32], align 16
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %9 = getelementptr inbounds [12 x i32], [12 x i32]* %7, i64 0, i64 0
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @sprintf(i32* %9, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = getelementptr inbounds [12 x i32], [12 x i32]* %7, i64 0, i64 0
  %13 = call i64 @MsiOpenPackageA(i32* %12, i32* %8)
  store i64 %13, i64* %6, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* @ERROR_SUCCESS, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i64, i64* %6, align 8
  store i64 %18, i64* %3, align 8
  br label %33

19:                                               ; preds = %2
  %20 = load i32, i32* %4, align 4
  %21 = call i64 @MsiCloseHandle(i32 %20)
  store i64 %21, i64* %6, align 8
  %22 = load i64, i64* %6, align 8
  %23 = load i64, i64* @ERROR_SUCCESS, align 8
  %24 = icmp ne i64 %22, %23
  br i1 %24, label %25, label %29

25:                                               ; preds = %19
  %26 = load i32, i32* %8, align 4
  %27 = call i64 @MsiCloseHandle(i32 %26)
  %28 = load i64, i64* %6, align 8
  store i64 %28, i64* %3, align 8
  br label %33

29:                                               ; preds = %19
  %30 = load i32, i32* %8, align 4
  %31 = load i32*, i32** %5, align 8
  store i32 %30, i32* %31, align 4
  %32 = load i64, i64* @ERROR_SUCCESS, align 8
  store i64 %32, i64* %3, align 8
  br label %33

33:                                               ; preds = %29, %25, %17
  %34 = load i64, i64* %3, align 8
  ret i64 %34
}

declare dso_local i32 @sprintf(i32*, i8*, i32) #1

declare dso_local i64 @MsiOpenPackageA(i32*, i32*) #1

declare dso_local i64 @MsiCloseHandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
